<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<Preference
		android:fragment="com.delightlane.keyboard.SebeolHangulIMEControlPanel$InputMethodFragment"
		android:title="@string/preference_method_setting_menu" />
	<Preference
		android:title="@string/preference_test_input_menu">
		<intent
			android:targetPackage="com.delightlane.keyboard"
			android:targetClass="com.delightlane.keyboard.view.TestInputActivity" />
	</Preference>
	<Preference
		android:fragment="com.delightlane.keyboard.SebeolHangulIMEControlPanel$KeyboardAppearanceFragment"
		android:title="@string/preference_appearance_setting_menu" />
	<Preference
		android:fragment="com.delightlane.keyboard.SebeolHangulIMEControlPanel$SoftKeyboardFragment"
		android:title="@string/preference_key_setting_menu" />
	<Preference
		android:fragment="com.delightlane.keyboard.SebeolHangulIMEControlPanel$HardKeyboardFragment"
		android:title="@string/preference_hardware_setting_menu" />
	<Preference
		android:fragment="com.delightlane.keyboard.SebeolHangulIMEControlPanel$SystemFragment"
		android:title="@string/preference_system_setting_menu" />
	<Preference
		android:fragment="com.delightlane.keyboard.SebeolHangulIMEControlPanel$AboutFragment"
		android:title="@string/preference_aboutime_menu" />
	<Preference
		android:fragment="com.delightlane.keyboard.SebeolHangulIMEControlPanel$DeveloperFragment"
		android:title="@string/preference_dev_menu" />

</PreferenceScreen>